--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +11,9 @@
 
 </head>
 <body>
-    
+    <ul class="pokemon-list"></ul>
     <script src="js/tota11y.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
-
-
 </html>
+
