--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <ul class="pokemon-list"></ul>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/tota11y.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
